testコードの警告を修正